--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,17 @@
 <p><%= @post.description %></p>
 <p><%= @post.user.name %></p>
 
+<div id="comment">
+  <h2 class="comment_count"><%= pluralize(@post.comments.count, "Comment") %></h2>
+      <% @comments.each do |comment| %>
+        <li><%= comment %></li>
+          <p><%= comment.user.name %></p>
+          <p><%= comment.content %></p>
+    <% end %>
+
+  <%= render "comments/form" %>
+</div>
+
 <%= link_to "Edit", edit_post_path(@post) %>
 <%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" } %>
 <%= link_to "Home", root_path %>
