--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,8 @@
     <%= link_to image_tag post.image.url(:small) %>
     <h2><%= link_to post.title, post %></h2>
     <p><%= post.comments.count %> Comments</p>
+    <p><%= post.get_likes.size %> Likes</p>
+    <p><%= post.get_dislikes.size %> Dislikes</p>
 <% end %>
 
 <%= link_to "Add New Inspiration", new_post_path %>
