Added structure and styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,7 @@
        <div id="logo">
          <%= link_to "Muse", root_path %>
 
-  </div>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+       </div>
     <nav>
       <% if user_signed_in? %>
           <%= link_to current_user.name, edit_user_registration_path %>
@@ -27,9 +25,15 @@
           <%= link_to "Sign Up", new_user_registration_path, class: "button" %>
       <% end %>
     </nav>
+  </div>
+
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
      <%= yield %>
-    </div>
+
+    <div class="wrapper"></div>
+
 </header>
 </body>
 </html>
