--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,24 +1,38 @@
-<%= image_tag @post.image.url(:medium) %>
-<h1><%= @post.title %></h1>
-<p><%= @post.link %></p>
-<p><%= @post.description %></p>
-<p><%= @post.user.name %></p>
-<p><%= @post.get_upvotes.size %> Likes</p>
-<p><%= @post.get_downvotes.size %> Dislikes</p>
-<%= link_to "Like", like_post_path(@post), method: :get %>
-<%= link_to "Dislike", dislike_post_path(@post), method: :get %>
+<div id="post_show">
+  <h1><%= @post.title %></h1>
+  <p class="username">Shared by <%= @post.user.name %><br />
+    about <%= time_ago_in_words(@post.created_at) %>
+  </p>
+  <div class="clearfix">
+    <div class="post_image_description">
+      <div class="description"><%= simple_format(@post.description) %></div>
+    </div>
+    <div class="post_data">
+      <%= link_to "Visit Link", @post.link, class: "button" %>
+      <%= link_to like_post_path(@post), method: :get, class: "data" do %>
+          <% end %>
+        <i class="fa fa-thumbs-o-up"><%= pluralize(@post.get_upvotes.size, "Like") %></i>
+      <%= link_to dislike_post_path(@post), method: :get, class: "data"  do %>
+         <i class="fa fa-thumbs-o-down"><%= pluralize(@post.get_downvotes.size, "Dislike") %></i>
+      <% end %>
+      <p class="data">
+        <i class="fa fa-comments-o"><%= pluralize(@post.comments.count, "Comment") %></i>
+      </p>
+      <% if @post.user == current_user %>
+        <%= link_to "Edit", edit_post_path(@post), class: "data" %>
+        <%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" }, class: "data" %>
+      <% end %>
+    </div>
+  </div>
+    <%= image_tag @post.image.url(:medium) %>
+    <div id="comments">
+      <h2 class="comment_count"><%= pluralize(@post.comments.count, "Comment") %></h2>
+          <% @comments.each do |comment| %>
+            <li><%= comment %></li>
+              <p><%= comment.user.name %></p>
+              <p><%= comment.content %></p>
+        <% end %>
 
-<div id="comment">
-  <h2 class="comment_count"><%= pluralize(@post.comments.count, "Comment") %></h2>
-      <% @comments.each do |comment| %>
-        <li><%= comment %></li>
-          <p><%= comment.user.name %></p>
-          <p><%= comment.content %></p>
-    <% end %>
-
-  <%= render "comments/form" %>
+      <%= render "comments/form" %>
+    </div>
 </div>
-
-<%= link_to "Edit", edit_post_path(@post) %>
-<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure?" } %>
-<%= link_to "Home", root_path %>
